overflow fix

--- a/style/style.scss
+++ b/style/style.scss
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   .editing {
     border: 2px solid #00bcd4;
     padding: 5px;
